--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.18",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@nextui-org/react": "^2.2.9",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -21,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
