home page updated

--- a/.hintrc
+++ b/.hintrc
@@ -17,6 +17,12 @@
           "-moz-appearance"
         ]
       }
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
     ]
   }
 }
