--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.0.1",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.0",
+    "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3"
