--- a/client/package.json
+++ b/client/package.json
@@ -24,15 +24,18 @@
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.6",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
+    "pretty-bytes": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.0",
+    "react-time-ago": "^7.3.1",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
